# summer

./: .flake8  .gitignore  README.md  data.js  pyproject.toml  rationale.md
.github/workflows/: benchmark.yml  docs.yml  tests.yml
docs/: conf.py  dev-setup.md  index.rst  install.ipynb  jupyter_notebook_config.py  rationale.md  rtdrequirements.txt
docs/api/: adjust.rst  compartment.rst  flows.rst  model.rst  solver.rst  stratification.rst
docs/examples/: 1-basic-model.ipynb  10-age-stratification.ipynb  10-derived-outputs-stratified.ipynb  11-flows-between-strata.ipynb  11-strain-stratification.ipynb  12-agent-based-model.ipynb  2-derived-outputs.ipynb  3-flow-types.ipynb  4-ode-solvers.ipynb  5-stochastic-solver.ipynb  6-basic-stratification.ipynb  6-stratification-introduction.ipynb  7-age-stratification.ipynb  8-strain-stratification.ipynb  9-mixing-matrices.ipynb  9-strain-stratification.ipynb  index.rst  sir-derived-outputs-example.ipynb  sir-example.ipynb  stochastic-mode.ipynb
docs/scripts/: build.sh  build_examples.py  clean.sh  deploy.sh  serve.sh  watch.sh
docs/textbook/: 01-basic-model.ipynb  02-derived-outputs.ipynb  02-flow-types.ipynb  02a-euler_check.ipynb  03-derived-outputs.ipynb  temp_euler_check.ipynb
docs/vynnycky_white/: chapter_2.ipynb  chapter_2_3.ipynb  chapter_2_4.ipynb  chapter_3.ipynb  chapter_4.ipynb  chapter_4_examples.ipynb  chapter_4_figures.ipynb  model_2_1.ipynb  preamble.ipynb
examples/: seir.py  sir.py
summer/: __init__.py  adjust.py  compartment.py  compute.py  derived_outputs.py  flows.py  inspect.py  jaxify.py  model.py  population.py  runner.py  solver.py  stochastic.py  stratification.py  tracker.py  utils.py
summer/agent/: agent.py  data_type.py  entities.py  example.py  fields.py  layouts.py  model.py  network.py  plotting.py  query.py  registry.py
summer/experimental/: abstract_parameter.py  model_builder.py
summer/legacy/: __init__.py  compartment.py  stratification.py
summer/parameters/: param_impl.py  params.py  utils.py
summer/runner/: __init__.py  (+3 more)
summer2/: __init__.py  adjust.py  derived_outputs.py  flows.py  inspect.py  model.py  population.py  solver.py  stratification.py
tests/: conftest.py  model_setup.py  test_add_flows.py  test_backends.py  test_benchmarks.py  test_compartment.py  test_compute.py  test_derived_outputs.py  test_examples.py  test_force_of_infection.py  test_force_of_infection_with_strains.py  test_jax.py  test_model_setup.py  test_outputs.py  test_population_restribution.py  test_solver.py  test_stratification.py  test_stratify_by_age.py  test_stratify_compartments.py  test_stratify_flows.py  test_stratify_infectiousness.py  test_stratify_mixing_matrix.py  test_stratify_strains.py
(+104 files in other folders)
