[tool.poetry]
name = "summerepi"
version = "3.6.2"
readme = "README.md"
license = "BSD-2-Clause"
homepage = "http://summerepi.com/"
documentation = "http://summerepi.com/"
repository = "https://github.com/monash-emu/summer"
keywords = [
    "epidemiology",
    "disease",
    "compartmental",
    "infectious",
]
description = "Summer is a compartmental disease modelling framework, written in Python. It provides a high-level API to build and run models."
authors = ["James Trauer <james.trauer@monash.edu>", "Matthew Segal <mattdsegal@gmail.com>"]
packages = [
    {include = "summer"}
]

[tool.poetry.dependencies]
python = ">=3.7.1,<3.11"
numpy = ">=1.20.3"
networkx = ">=2.6.2"
scipy = ">=1.7.1"
numba = ">=0.54.0"
pandas = ">=1.3.2"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
black = "^20.8b0"
matplotlib = ">=3.4.3"
Sphinx = "^3.5.2"
sphinx-rtd-theme = "^0.5.1"
recommonmark = "^0.7.1"
sphinxcontrib-napoleon = "^0.7"
jupyter = ">=1.0.0"
nbsphinx = "^0.8.2"
sphinx-autobuild = "^2021.3.14"
pytest-parallel = "^0.1.0"
pytest-benchmark = "^3.4.1"
isort = "^5.9.3"
pre-commit = "^2.19.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = "-W ignore"
testpaths = ["tests"]

[tool.black]
line-length = 100
